Alterado a página home e adicionada uma imagem

--- a/home.html
+++ b/home.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home</title>
 </head>
-<body style="background-color: blue; color:blueviolet;">
+<body style="background-color: blue; color:rgb(226, 43, 43);">
+    <div align="center">
     <h1>Homer Simpson</h1>
-    <h2>Nosso site legal mrece uma casa</h2>
-    <p>Uma casa home para o home da casa</p>
+    <h2>Home</h2>
+    <div class="margin:10%; border: 2px solid #c8c8c8">
+    <img src="./imgs/casa.jpg">
+    </div>
+    </div>
 </body>
 </html>
